--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,7 +15,7 @@
 <%= f.password_field :password_confirmation, class: 'form-control' %>
 <p>
      <b> attachment </b><br/>
-     <%= f.file_field :attach %>
+     <%= f.file_field :document %>
 </p>
 
 <p>
