--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 <%= gravatar_for @user %>
 <%= @user.name %>
 </h1>
-<a href="<%= @user.attach.url %> ">
+<a href="<%= @user.document.url %> ">
      <b> File Attached</b>
 </a>
 <br/>
